# HoshinoBot

./: .gitignore  demo.py  pyproject.toml  requirements.txt  run.py
data/: anime.json
hoshino/: R.py  __init__.py  msgBuild.py  msghandler.py  priv.py
hoshino/modules/a_soul_ill/: asill.py  data.json
hoshino/modules/aichat/: aichat.py  data_source.py
hoshino/modules/answersBook/: answersbook.py
hoshino/modules/bilidynamicpush/: config.json  push.py
hoshino/modules/binance/: push.py
hoshino/modules/botchat/: botchat.py
hoshino/modules/botmanage/: broadcast.py  help.py  service_manage.py
hoshino/modules/cosPic/: cosPic.py  data.py
hoshino/modules/cos_v2/: cos.py  cos_util.py
hoshino/modules/cp/: content.json  cp.py
hoshino/modules/daily_check/: __init__.py  data_source.py
hoshino/modules/daily_news/: __init__.py  daily_news.py
hoshino/modules/deepchat/: deepchat.py
hoshino/modules/groupmaster/: anti_abuse.py  antiqks.py  chat.py  group_notice.py  random_repeater.py  sleeping_set.py
hoshino/modules/kgqgj/: __init__.py  damage.html  data_source.py
hoshino/modules/lifeRestart/: AgeManager.py  Event.py  EventManager.py  Life.py  PropertyManager.py  TalentManager.py  Utils.py  __init__.py
hoshino/modules/lifeRestart_bot/: Event.py  EventManager.py  Life.py  PicClass.py  PropertyManager.py  Talent.py  TalentManager.py  Utils.py  __init__.py
hoshino/modules/liveNotice/: __init__.py  _util.py  live_notice.py
hoshino/modules/live_notice/: live_notice.py  util.py
hoshino/server/: http_api.py  init.py
hoshino/util/: __init__.py  browser.py
(+49 files in other folders)
